--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,8 @@ addopts =
     --verbose
     --cov=lib
     --cov-report=html
+
+markers =
+    performance: mark test as performance test
+    GET: mark test as GET request
+    flaky: mark test as flaky test
