--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+jsonschema==4.23.0
+psutil==7.0.0
 pytest==8.3.5
+pytest-cov==6.0.0
 pytest-html==4.1.1
 pytest-xdist==3.6.1
 requests==2.32.3
-jsonschema==4.23.0
-pytest-cov==6.0.0
