--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+black==25.1.0
+flake8==7.1.2
 jsonschema==4.23.0
 psutil==7.0.0
+pylint==3.3.5
 pytest==8.3.5
 pytest-cov==6.0.0
 pytest-html==4.1.1
