--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ pylint==3.3.5
 pytest==8.3.5
 pytest-cov==6.0.0
 pytest-html==4.1.1
+pytest-rerunfailures==15.0
 pytest-xdist==3.6.1
 requests==2.32.3
