--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,10 @@ on:
   push:
     branches:
       - main
-      - develop
+      - testing-ci-pipeline
   pull_request:
     branches:
       - main
-      - develop
 
 jobs:
   test:
@@ -31,17 +30,9 @@ jobs:
     - name: Set PYTHONPATH
       run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
 
-    - name: Run tests with coverage
-      run: pytest --cov=lib --cov-report=html --html=report.html --self-contained-html
-
-    # - name: Upload HTML report
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: pytest-html-report
-    #     path: report.html
-
-    # - name: Upload coverage report
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: coverage-report
-    #     path: htmlcov
+    - name: Upload HTML report
+      uses: actions/upload-artifact@v3
+      with:
+        name: pytest-html-report
+        path: report.html
+        
