--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,10 @@ on:
   push:
     branches:
       - main
-      - develop
+      - testing-ci-pipeline
   pull_request:
     branches:
       - main
-      - develop
 
 jobs:
   test:
