--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup Python
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.11
@@ -27,12 +27,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Set PYTHONPATH
-      run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+    - name: Run tests
+      run: |
+        pytest --maxfail=1 --disable-warnings -v --html=report.html
 
     - name: Upload HTML report
       uses: actions/upload-artifact@v3
       with:
-        name: pytest-html-report
+        name: html-report
         path: report.html
-        
